fix groups add user select display, handle white space on create groups

--- a/portal/static/css/scrolling-nav.css
+++ b/portal/static/css/scrolling-nav.css
@@ -218,3 +218,7 @@ a[data-toggle="collapse"] {
   background: transparent!important;
   border-color: transparent!important;
 }
+
+.input-group {
+  align-items: center!important;
+}
